# beir

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  NOTICE.txt  README.md  all_encode_tag.py  dev.ipynb  dev.py  dev_2.ipynb  eval_own.py  evaluate.py  mmlu_evaluate.py  ppo.py  ppo_bc.py  pyproject.toml  re_utils.py  requirements.txt  run.sh  run_eval.sh  run_eval_bc.sh  run_ppo_bc.sh  run_sft.sh  rusbeir.ipynb  setup.py  test.ipynb  train.py
beir/: __init__.py  logging.py  test_retrieval_lexical_vespa.py  util.py
beir/datasets/: data_loader.py  data_loader_hf.py
beir/datasets/fiqa/: queries.jsonl
beir/filtration/: __init__.py  filter.py
beir/filtration/models/: __init__.py  auto_model.py
beir/generation/: __init__.py  generate.py  util.py
beir/generation/models/: __init__.py  auto_model.py  bart.py  t5.py  tilde.py
beir/losses/: __init__.py  bpr_loss.py  margin_mse_loss.py
beir/reranking/: __init__.py  rerank.py
beir/reranking/models/: __init__.py  mono_t5.py  (+1 more)
beir/retrieval/: custom_metrics.py  evaluation.py  train.py
code/models/: bm25.py  dpr.py  sentence_bert.py
datasets/: download_data.py  md5.csv  util.py
examples/beir-pyserini/: Dockerfile  config.py  dockerhub.sh  main.py
examples/benchmarking/: benchmark_bm25.py  benchmark_bm25_ce_reranking.py  benchmark_lexical_vespa.py  benchmark_sbert.py  opensearch_benchmark_bm25.py  opensearch_benchmark_hybrid.py  opensearch_benchmark_neural.py  using_beir_with_a_custom_sbert_model.py
examples/dataset/: README.md  download_dataset.py  md5.csv  scrape_tweets.py
examples/datasets/: download_data.py
examples/filtration/: query_gen_and_filter.py  query_gen_filter_and_train.py
examples/generation/: QueGenerator.py  generate_queries.py  generate_t5.py  passage_expansion_tilde.py  query_gen.py  query_gen_and_train.py  query_gen_multi_gpu.py  query_generator.py  util.py
examples/retrieval/: README.md  Retrieval_Example.ipynb  evaluate_bm25.py  evaluate_custom.py  evaluate_dense.py  evaluate_dpr.py  evaluate_faiss_dense.py  evaluate_sbert.py  evaluate_useqa.py  train_dense.py  train_sbert.py
old_files/: NOTICE.txt
retrieval/: evaluate_model.py
retrieval/evaluation/: evaluation.py
retrieval/search/: retrieval_search.py
tests/: test_retrieval_lexical_manticore_bm25.py
utils/: preprocessing.py  top100.py
(+123 files in other folders)
